bug-fix più catch delle "mie" eccezioni